before batch mangling